# ArcaneUntitled

./: .gitignore  CMakeLists.txt  CMakePresets.json
build-gcc/: compile_commands.json
build-gcc/.cmake/api/v1/reply/: cache-v2-526d634f8a5880cf2ffa.json  cache-v2-d84c46372b45f6f765a0.json  cmakeFiles-v1-8481cbcdc1c8db0a9376.json  cmakeFiles-v1-a7d00074099094e96793.json  codemodel-v2-2f7cf5dc45e692e7f4ae.json  index-2026-06-18T13-34-18-0043.json  index-2026-06-18T14-17-04-0806.json  target-ArcaneUntitled-Debug-bfce46ae6578b917965d.json
build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ArcaneUntitled.sln  ArcaneUntitled.vcxproj  ArcaneUntitled.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  compile_commands.json
build-msvc/.cmake/api/v1/reply/: cache-v2-975e91af0f47b677b7af.json  cache-v2-c691aac1447b141c6337.json  cmakeFiles-v1-002bd99ab1177cd11a10.json  cmakeFiles-v1-2384668c65bf46b19382.json  codemodel-v2-02448b18c47f5ce489e7.json  codemodel-v2-397657c324204dc97168.json  index-2026-06-18T13-35-40-0859.json  index-2026-06-18T14-19-55-0716.json  target-ALL_BUILD-MinSizeRel-30cfe4e99ee3c57e4173.json  target-ArcaneUntitled-Debug-18b513aa0ddc4dc2e970.json  target-ArcaneUntitled-Debug-f0a1cf4a409df5d2c7f0.json  target-ArcaneUntitled-MinSizeRel-63c42367337f4e3f4e1d.json  target-ArcaneUntitled-RelWithDebInfo-082cf986609b4470a685.json  target-ArcaneUntitled-Release-f800dae4ff8cb3d7b0b9.json  target-ZERO_CHECK-Release-150d9fa99f690ce7eae1.json  toolchains-v1-1d042df1314a734d53a6.json
build-msvc/ArcaneUntitled.dir/Debug/: ArcaneUntitled.exe.recipe
build-msvc/ArcaneUntitled.dir/Debug/ArcaneUntitled.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-msvc/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build-msvc/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog
build-msvc/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build-msvc/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cmake/: Findglfw3.cmake
dependencies/glad/: glad.h
src/: Main.cpp  config.h  glad.c
src/shaders/: testFile.txt
